# S3MP

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-environment.yml  docker-build.ps1  docker-compose.yaml  environment.yml  pyproject.toml
.github/: copilot-instructions.md  labeler.yml  pr-labeler.yaml  pr-labeler.yml  pull_request_template.md  tasks.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pr_template.md  pull_request_template.md
.github/workflows/: feature_branch.yaml  label-pr.yml  lint.yaml  lint_and_test.yaml  main_branch.yaml  pr-labeler.yaml  pr-labeler.yml  tag-it.yml
S3MP/: README.md  __init__.py  _version.py  async_transfers.py  async_utils.py  callbacks.py  configs.py  global_config.py  globals.py  keys.py  mirror_path.py  multipart_uploads.py  prefix_queries.py  s3path.py  transfer_configs.py  types.py
S3MP/utils/: __init__.py  image_utils.py  local_file_utils.py  s3_utils.py
tests/: test_s3_utils.py
