[tool.poetry]
name = "S3MP"
version = "0.5.2"
description = "S3 Mirror Path"
authors = [
    "Joshua Dean <joshua.dean@sentera.com>"
    "Trevor Burgoyne <trevor.burgoyne@sentera.com>"
]

[tool.poetry.dependencies]
python = ">=3.9"
aioboto3 = "*"
boto3 = "*"
boto3-stubs = "*"
botocore = "*"
future = "*"
mypy-boto3-s3 = "*"
pip = "*"
psutil = "*"
pyparsing = "*"
pyproj = "*"
setuptools = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre_commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"