[project]
name = "S3MP"
version = "0.5.4"
description = ""
authors = [
    {name = "Joshua Dean", email = "joshua.dean@sentera.com"}
]
dependencies = [ 
    "aioboto3",
    "boto3",
    "boto3-stubs",
    "botocore",
    "future",
    "mypy-boto3-s3",
    "pip",
    "psutil",
    "pyparsing",
    "pyproj",
    "setuptools",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["S3MP"]
packages = [
    'S3MP',
    'S3MP.utils'
]
