[project]
name = "S3MP"
version = "0.7.0"
description = ""
authors = [
    {name = "Joshua Dean", email = "joshua.dean@sentera.com"},
    {name = "Trevor Burgoyne", email = "trevor.burgoyne@sentera.com"},
]
requires-python = ">=3.8"
dependencies = [
    "aioboto3",
    "boto3",
    "boto3-stubs",
    "botocore",
    "future",
    "mypy-boto3-s3",
    "psutil",
    "pyparsing",
    "pyproj",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "mypy",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["S3MP"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N999",  # invalid module name (S3MP is an established package name)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
